2009-02-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-26-05
	* fix converter/summary/ascii/data, Integer -> Long for prescales

2009-01-09  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-26-04
	* fix release migration, which couldn't handle removed esmodules,
	services, etc.
	* parser: add protection against duplicate addition of
	appendToDataLabel parameter (Jonathan)

2008-12-01  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-26-03
	* fix provided by Ulf for online python migration

2008-11-04  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-26-02
	* fix bug in PrescaleTable (adjustment necessary to VUint32 being
	modelled using Long now)
	* OnlineConverter: only check that MessageLogger.destinations
	contains 'log4cplus' at all, and that
	MessageLogger.log4cplus.threshold exists
	* pick up Jonathan's latest developments, which are still work in
	progress

2008-10-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-26-01
	* set default esConnect string in OnlineConverter to localhost, as
	requested by David Dykstra

2008-10-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-26-00
	* udpate schema and code for new int64 parameters

2008-10-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-11
	* browser/WebContent/get.jsp: change default for 'format' to
	'python' (was: 'ascii')

2008-09-30  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-10
	* fix OM dialog (reported by Tulika)

2008-09-19  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-09
	* add ErrorStreamFileWriter to SM configuration in
	confdb.converter.OnlineConverter

2008-09-18  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>

	* tag V00-25-08
	* first release of confdb.db.ConfDBCreateConfig and
	test/runCreateConfig

2008-09-17  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
